@@ -2512,6 +2512,7 @@ static void mw_conversation_closed(struct mwConversation *conv,
 
 
 static char *im_decode(GaimConnection *gc, const char *msg) {
+  /* may want to perform more magic here some day */
   return gaim_utf8_try_convert(msg);
 }
 
@@ -3665,28 +3666,31 @@ static char *im_mime_content_type() {
 
 /** determine content type from extension. Not so happy about this,
     but I don't want to actually write image type detection */
-static const char *im_mime_img_content_type(GaimStoredImage *img) {
+static char *im_mime_img_content_type(GaimStoredImage *img) {
   const char *fn = gaim_imgstore_get_filename(img);
+  const char *ct = NULL;
 
-  fn = strrchr(fn, '.');
-  if(! fn) {
-    return "image";
+  ct = strrchr(fn, '.');
+  if(! ct) {
+    ct = "image";
 
-  } else if(! strcmp(".png", fn)) {
-    return "image/png";
+  } else if(! strcmp(".png", ct)) {
+    ct = "image/png";
 
-  } else if(! strcmp(".jpg", fn)) {
-    return "image/jpeg";
+  } else if(! strcmp(".jpg", ct)) {
+    ct = "image/jpeg";
 
-  } else if(! strcmp(".jpeg", fn)) {
-    return "image/jpeg";
+  } else if(! strcmp(".jpeg", ct)) {
+    ct = "image/jpeg";
 
-  } else if(! strcmp(".gif", fn)) {
-    return "image/gif";
+  } else if(! strcmp(".gif", ct)) {
+    ct = "image/gif";
 
   } else {
-    return "image";
+    ct = "image";
   }
+
+  return g_strdup_printf("%s; name=\"%s\"", ct, fn);
 }
 
 
@@ -3696,8 +3700,56 @@ static char *im_mime_img_content_disp(GaimStoredImage *img) {
 }
 
 
+static char *nb_im_encode(GaimConnection *gc, const char *message) {
+  GaimAccount *acct;
+  const char *enc;
+  char *ret;
+  GError *error = NULL;
+  
+  acct = gaim_connection_get_account(gc);
+  g_return_val_if_fail(acct != NULL, NULL);
+
+  enc = gaim_account_get_string(acct, MW_KEY_ENCODING,
+				MW_PLUGIN_DEFAULT_ENCODING);
+  g_return_val_if_fail(enc != NULL, NULL);
+
+  ret = g_convert_with_fallback(message, strlen(message),
+				enc, "UTF-8", "?",
+				NULL, NULL, &error);
+ 
+ if(error) {
+    DEBUG_INFO("problem converting to %s: %s\n",
+	       enc, NSTR(error->message));
+    g_error_free(error);
+ }
+ 
+ /* something went so wrong that not even the fallback worked */
+ if(! ret) ret = g_strdup(message);
+
+ return ret;
+}
+
+
+static gboolean is_nb(struct mwConversation *conv) {
+  struct mwLoginInfo *info;
+
+  info = mwConversation_getTargetInfo(conv);
+  if(! info) return FALSE;
+
+  /* NotesBuddy can be at least three different type IDs (all in the
+     0x1400 range), or it can show up as 0x1002. However, if we're
+     calling this check, then we're already in HTML or MIME mode, so
+     we can discount the real 0x1002 */
+  /* I tried to avoid having any client-type-dependant code in here, I
+     really did. Oh well. CURSE YOU NOTESBUDDY */
+  return ((info->type == 0x1002) || ((info->type & 0xff00) == 0x1400));
+}
+
+
 /** turn an IM with embedded images into a multi-part mime document */
-static char *im_mime_convert(const char *message) {
+static char *im_mime_convert(GaimConnection *gc,
+			     struct mwConversation *conv,
+			     const char *message) {
   GString *str;
   GaimMimeDocument *doc;
   GaimMimePart *part;
@@ -3743,15 +3795,16 @@ static char *im_mime_convert(const char *message) {
       gaim_mime_part_set_field(part, "Content-Disposition", data);
       g_free(data);
 
+      data = im_mime_img_content_type(img);
+      gaim_mime_part_set_field(part, "Content-Type", data);
+      g_free(data);
+
       cid = im_mime_content_id();
       data = g_strdup_printf("<%s>", cid);
       gaim_mime_part_set_field(part, "Content-ID", data);
       g_free(data);
 
       gaim_mime_part_set_field(part, "Content-transfer-encoding", "base64");
-      gaim_mime_part_set_field(part, "Content-Type",
-			       im_mime_img_content_type(img));
-
 
       /* obtain and base64 encode the image data, and put it in the
 	 mime part */
@@ -3779,12 +3832,31 @@ static char *im_mime_convert(const char *message) {
   /* append left-overs */
   g_string_append(str, tmp);
 
+  /* add the text/html part */
   part = gaim_mime_part_new(doc);
-  gaim_mime_part_set_field(part, "Content-Type", "text/html");
   gaim_mime_part_set_field(part, "Content-Disposition", "inline");
-  gaim_mime_part_set_field(part, "Content-Transfer-Encoding", "8bit");
 
-  gaim_mime_part_set_data(part, str->str);
+  if(is_nb(conv)) {
+    GaimAccount *acct = gaim_connection_get_account(gc);
+
+    tmp = (char *) gaim_account_get_string(acct, MW_KEY_ENCODING,
+					   MW_PLUGIN_DEFAULT_ENCODING);
+    tmp = g_strdup_printf("text/html; charset=\"%s\"", tmp);
+    gaim_mime_part_set_field(part, "Content-Type", tmp);
+    g_free(tmp);
+    
+    gaim_mime_part_set_field(part, "Content-Transfer-Encoding", "7bit");
+
+    tmp = nb_im_encode(gc, str->str);
+    gaim_mime_part_set_data(part, tmp);
+    g_free(tmp);
+
+  } else {
+    gaim_mime_part_set_field(part, "Content-Type", "text/html");
+    gaim_mime_part_set_field(part, "Content-Transfer-Encoding", "8bit");
+    gaim_mime_part_set_data(part, str->str);
+  }
+
   g_string_free(str, TRUE);
 
   str = g_string_new(NULL);
@@ -3796,46 +3868,6 @@ static char *im_mime_convert(const char *message) {
 }
 
 
-static char *nb_im_encode(GaimConnection *gc, const char *message) {
-  GaimAccount *acct;
-  const char *enc;
-  char *ret;
-  GError *error = NULL;
-  
-  acct = gaim_connection_get_account(gc);
-  g_return_val_if_fail(acct != NULL, NULL);
-
-  enc = gaim_account_get_string(acct, MW_KEY_ENCODING,
-				MW_PLUGIN_DEFAULT_ENCODING);
-  g_return_val_if_fail(enc != NULL, NULL);
-
-  ret = g_convert_with_fallback(message, -1, enc, "UTF-8",
-				"?", NULL, NULL, &error);
-  if(error) {
-    DEBUG_INFO("problem converting to %s: %s\n",
-	       enc, NSTR(error->message));
-    g_error_free(error);
-  }
-  return ret;
-}
-
-
-static gboolean is_nb(struct mwConversation *conv) {
-  struct mwLoginInfo *info;
-
-  info = mwConversation_getTargetInfo(conv);
-  if(! info) return FALSE;
-
-  /* NotesBuddy can be at least three different type IDs (all in the
-     0x1400 range), or it can show up as 0x1002. However, if we're
-     calling this check, then we're already in HTML or MIME mode, so
-     we can discount the real 0x1002 */
-  /* I tried to avoid having any client-type-dependant code in here, I
-     really did. Oh well. CURSE YOU NOTESBUDDY */
-  return ((info->type == 0x1002) || (info->type & 0x1400));
-}
-
-
 static int mw_prpl_send_im(GaimConnection *gc,
 			   const char *name,
 			   const char *message,
@@ -3844,14 +3876,11 @@ static int mw_prpl_send_im(GaimConnection *gc,
   struct mwGaimPluginData *pd;
   struct mwIdBlock who = { (char *) name, NULL };
   struct mwConversation *conv;
-  char *msg = NULL;
 
   g_return_val_if_fail(gc != NULL, 0);
   pd = gc->proto_data;
 
   g_return_val_if_fail(pd != NULL, 0);
-
-  msg = g_strdup(message);
 
   conv = mwServiceIm_getConversation(pd->srvc_im, &who);
 
@@ -3863,7 +3892,7 @@ static int mw_prpl_send_im(GaimConnection *gc,
      conversation will receive a plaintext message with html contents,
      which is bad. I'm not sure how to fix this correctly. */
 
-  if(strstr(msg, "<img ") || strstr(msg, "<IMG "))
+  if(strstr(message, "<img ") || strstr(message, "<IMG "))
     flags |= GAIM_CONV_IM_IMAGES;
 
   if(mwConversation_isOpen(conv)) {
@@ -3874,38 +3903,31 @@ static int mw_prpl_send_im(GaimConnection *gc,
        mwConversation_supports(conv, mwImSend_MIME)) {
       /* send a MIME message */
 
-      /* mime messages need the notesbuddy hack */
-      if(is_nb(conv)) {
-	g_free(msg);
-	msg = nb_im_encode(gc, message);
-      }
-
-      tmp = im_mime_convert(msg);
-      g_free(msg);
-
+      tmp = im_mime_convert(gc, conv, message);
       ret = mwConversation_send(conv, mwImSend_MIME, tmp);
       g_free(tmp);
       
     } else if(mwConversation_supports(conv, mwImSend_HTML)) {
       /* send an HTML message */
 
-      /* html messages need the notesbuddy hack */
-      if(is_nb(conv)) {
-	g_free(msg);
-	msg = nb_im_encode(gc, message);
-      }
-
       /* need to do this to get the \n to <br> conversion */
-      tmp = gaim_strdup_withhtml(msg);
-      g_free(msg);
+      if(is_nb(conv)) {
+
+	/* html messages need the notesbuddy hack */
+	char *msg = nb_im_encode(gc, message);
+	tmp = gaim_strdup_withhtml(msg);	
+	g_free(msg);
+
+      } else {
+	tmp = gaim_strdup_withhtml(message);
+      }
 
       ret = mwConversation_send(conv, mwImSend_HTML, tmp);
       g_free(tmp);
 
     } else {
       /* default to text */
-      ret = mwConversation_send(conv, mwImSend_PLAIN, msg);
-      g_free(msg);
+      ret = mwConversation_send(conv, mwImSend_PLAIN, message);
     }
     
     return !ret;
@@ -3913,9 +3935,7 @@ static int mw_prpl_send_im(GaimConnection *gc,
   } else {
 
     /* queue up the message safely as plain text */
-    char *tmp = gaim_markup_strip_html(msg);
-    g_free(msg);
-
+    char *tmp = gaim_markup_strip_html(message);
     convo_queue(conv, mwImSend_PLAIN, tmp);
     g_free(tmp);
 
@@ -4055,6 +4075,8 @@ static void mw_prpl_set_away(GaimConnection *gc,
   /* get a working copy of the current status */
   mwUserStatus_clone(&stat, mwSession_getUserStatus(session));
 
+  DEBUG_INFO("Set status to %s\n%s\n", NSTR(state), NSTR(message));
+
   /* determine the state */
   if(state) {
     if(! strcmp(state, GAIM_AWAY_CUSTOM)) {
@@ -4072,6 +4094,7 @@ static void mw_prpl_set_away(GaimConnection *gc,
 
     } else if(! strcmp(state, MW_STATE_ACTIVE)) {
       stat.status = mwStatus_ACTIVE;
+      /* stat.time = 0; */
     }
 
   } else {
@@ -4094,7 +4117,6 @@ static void mw_prpl_set_away(GaimConnection *gc,
     case mwStatus_ACTIVE:
       message = gaim_account_get_string(acct, MW_KEY_ACTIVE_MSG,
 					MW_PLUGIN_DEFAULT_ACTIVE_MSG);
-      stat.time = 0;
       break;
     }
   }
@@ -4105,13 +4127,9 @@ static void mw_prpl_set_away(GaimConnection *gc,
     message = gaim_markup_strip_html(message);
   }
 
-  /* out with the old */
+  /* out with the old, in with the new */
   g_free(stat.desc);
-  g_free(gc->away);
-
-  /* in with the new */
   stat.desc = (char *) message;
-  gc->away = g_strdup(message);
 
   mwSession_setUserStatus(session, &stat);
   mwUserStatus_clear(&stat);  
@@ -4121,19 +4139,27 @@ static void mw_prpl_set_away(GaimConnection *gc,
 static void mw_prpl_set_idle(GaimConnection *gc, int t) {
   struct mwSession *session;
   struct mwUserStatus stat;
+ 
 
   session = gc_to_session(gc);
   g_return_if_fail(session != NULL);
 
   mwUserStatus_clone(&stat, mwSession_getUserStatus(session));
 
-  if(t > 0 && stat.status == mwStatus_ACTIVE) {
+  if(t) {
     time_t now = time(NULL);
     stat.time = now - t;
+
+  } else {
+    stat.time = 0;
+  }
+
+  if(t > 0 && stat.status == mwStatus_ACTIVE) {
+    /* we were active and went idle, so change the status to IDLE. */
     stat.status = mwStatus_IDLE;
 
   } else if(t == 0 && stat.status == mwStatus_IDLE) {
-    stat.time = 0;
+    /* we only become idle automatically, so change back to ACTIVE */
     stat.status = mwStatus_ACTIVE;
   }
 
@@ -5595,25 +5621,19 @@ static GaimPluginInfo mw_plugin_info = {
 
 static void mw_log_handler(const gchar *domain, GLogLevelFlags flags,
 			   const gchar *msg, gpointer data) {
-  char *nl;
 
-  if(! msg) return;
-
-  /* annoying! */
-  nl = g_strdup_printf("%s\n", msg);
+  if(! (msg && *msg)) return;
 
   /* handle g_log requests via gaim's built-in debug logging */
   if(flags & G_LOG_LEVEL_ERROR) {
-    gaim_debug_error(domain, nl);
+    gaim_debug_error(domain, "%s\n", msg);
 
   } else if(flags & G_LOG_LEVEL_WARNING) {
-    gaim_debug_warning(domain, nl);
+    gaim_debug_warning(domain, "%s\n", msg);
 
   } else {
-    gaim_debug_info(domain, nl);
+    gaim_debug_info(domain, "%s\n", msg);
   }
-
-  g_free(nl);
 }
 
 
